--- a/src/components/BackupComponents/Backup.css
+++ b/src/components/BackupComponents/Backup.css
@@ -44,7 +44,8 @@
 .card-title {
   font-size: 1.5rem;
   color: #333;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
+  padding-top: 20px;
 }
 
 .MAS {
